MapClient: Fix map not centering correctly depending on the panel visibility.

--- a/public/stylesheets/map.css
+++ b/public/stylesheets/map.css
@@ -131,8 +131,15 @@ button.red:focus {
     border: 1px solid #b17a55;
 }
 
+#map-wrapper {
+    width: 100%;
+    height: 100%;
+    display: flex;
+}
+
 #side-panel {
     width: 150px;
+    flex-shrink: 0;
     height: 100%;
     box-shadow: 5px 0px 6px #00000080;
     z-index: 5;
@@ -148,7 +155,6 @@ button.red:focus {
 #map {
     touch-action: none;
     width: 100%;
-    margin-left: 150px;
     height: 100%;
     user-select: none;
     background-color: #436213;
